(#5709) - Address website layout bugs
* (#5709) - Revert "(#5495) - Wraps anchors in divs"

This reverts commit 5c8289bb4d1c53cd89e7ba4a8f355b2773b0c196.

Fixes #5709

* (#5495) - Fix inline appearance of some headers

This fix uses CSS only as the previous markup-based fix appeared to
produce some bad HTML (case #5709)

[skip ci]

--- a/docs/static/less/pouchdb/type.less
+++ b/docs/static/less/pouchdb/type.less
@@ -11,6 +11,10 @@ h1, h2, h3, h4, h5, h6,
   }
 }
 
+h1, h2, h3 {
+  display: block;
+}
+
 p, ul, ol, pre {
   margin-bottom: @spacing-base;
 }
